<resources>

    <string name="app_name">VK Vibes</string>
    <string name="vibes">Vibes</string>
    <string name="sign_in">Sign in</string>
    <string name="logout">Logout</string>
    <string name="gettingSongsNewsfeed">Getting newsfeed audios…</string>
    <string name="searchingSongs">Searching…</string>
    <string name="gettingSongsWall">Getting wall audios…</string>
    <string name="gettingSongsAudios">Getting audios…</string>
    <string name="gettingSongsAlbum">Getting album audios…</string>
    <string name="authProblem">Authorization error</string>
    <string name="buffering">Buffering…</string>
    <string name="loading">Loading…</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="account">Last.fm</string>
    <string name="last_success">Scrobbling is enabled</string>
    <string name="auth">Authorization…</string>
    <string name="title_repeat">Repeat playlist</string>
    <string name="summary_repeat">Repeat playlist when the end is reached</string>
    <string name="title_max_news">Posts count</string>
    <string name="summary_max_news">Posts count to get audios from</string>
    <string name="default_max_news">100</string>
    <string name="title_max_audio">Audios count</string>
    <string name="summary_max_audio">Audios count to fill the playlist</string>
    <string name="default_max_audio">200</string>
    <string name="prefs">Settings</string>
    <string name="tracklist">tracklist</string>
    <string name="playlist">Playlists</string>
    <string name="unknownError">Unknown error is occured</string>
    <string name="empty">No items</string>
    <string name="access_denied">User has limited the access to his audios</string>
    <string name="no_internet">Unable to connect the server, check your network and try again</string>
    <string name="login">Login</string>

    <string-array name="wall_options">
        <item>25</item>
        <item>50</item>
        <item>75</item>
        <item>100</item>
    </string-array>
    <string-array name="audios_options">
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>400</item>
        <item>500</item>
    </string-array>
    <string-array name="playlist_options">
        <item>Friends</item>
        <item>Communities</item>
        <item>My audios</item>
        <item>Wall audios</item>
        <item>Newsfeed audios</item>
    </string-array>
    <string-array name="unit_options">
        <item>All audios</item>
        <item>Wall audios</item>
    </string-array>
    <string-array name="context_options">
        <item>Add and love</item>
        <item>Remove from playlist</item>
        <item>Download</item>
    </string-array>

    <string name="remove_unlove">Remove and unlove</string>
    <string name="downloading">Downloading</string>
    <string name="insertSdCard">Insert an SD card</string>
    <string name="downloads_directory">Downloads directory</string>
    <string name="download_success">Successfully downloaded</string>
    <string name="download_fail">Couldn\'t finish the download</string>
    <string name="finish_download_notification_title">Download is finished notification</string>
    <string name="finish_download_notification_summary">Show notification when download is complete</string>
    <string name="vkontakte">VKontakte</string>
    <string name="download">Download</string>
    <string name="search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="refresh">Refresh</string>
    <string name="refresh">Refresh</string>
    <string name="refresh">Refresh</string>
    <string name="slash">/</string>

</resources>