<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:orderingFromXml="true" >

    <Preference
        android:key="directory picker"
        android:title="@string/downloads_directory" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="repeat"
        android:summary="@string/summary_repeat"
        android:title="@string/title_repeat" />

    <ListPreference
        android:defaultValue="@string/default_max_audio"
        android:dialogTitle="@string/title_max_audio"
        android:entries="@array/audios_options"
        android:entryValues="@array/audios_options"
        android:key="max audio"
        android:summary="@string/summary_max_audio"
        android:title="@string/title_max_audio" />
    <ListPreference
        android:defaultValue="@string/default_max_news"
        android:dialogTitle="@string/title_max_news"
        android:entries="@array/wall_options"
        android:entryValues="@array/wall_options"
        android:key="max news"
        android:summary="@string/summary_max_news"
        android:title="@string/title_max_news" />

</PreferenceScreen>