<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/itemSearch"
        android:icon="@drawable/ic_action_search"
        android:showAsAction="always"
        android:title="@string/search">
    </item>
    <item
        android:id="@+id/itemDownload"
        android:icon="@drawable/ic_action_download"
        android:showAsAction="ifRoom"
        android:title="@string/download">
    </item>
    <item
        android:id="@+id/itemRefresh"
        android:icon="@drawable/ic_action_refresh"
        android:showAsAction="ifRoom"
        android:title="@string/refresh">
    </item>
    <item
        android:id="@+id/itemSleepingTimer"
        android:icon="@drawable/ic_action_sleeping_timer"
        android:showAsAction="ifRoom"
        android:title="@string/sleep_timer">
    </item>
    <item
        android:id="@+id/itemPrefs"
        android:icon="@drawable/ic_action_settings"
        android:showAsAction="ifRoom"
        android:title="@string/prefs">
    </item>
    <item
        android:id="@+id/itemLogOut"
        android:icon="@drawable/ic_action_undo"
        android:showAsAction="ifRoom"
        android:title="@string/logout">
    </item>

</menu>